--- a/BooksByHalim/BooksByHalim/Views/Shared/_Layout.cshtml
+++ b/BooksByHalim/BooksByHalim/Views/Shared/_Layout.cshtml
@@ -22,7 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <div class="custom-control custom-switch" style="margin-left: 15px">
+                                <input type="checkbox" class="custom-control-input" id="customSwitch1">
+                                <label class="custom-control-label" for="customSwitch1">Books</label>
+                            </div>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -32,7 +35,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            <!--    @RenderBody() -->
+            @RenderBody()
         </main>
     </div>
 
