--- a/BooksByHalim/BooksByHalim/Views/Books/Index.cshtml
+++ b/BooksByHalim/BooksByHalim/Views/Books/Index.cshtml
@@ -4,50 +4,39 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+@foreach (var item in Model)
+{
+    <div class="mycontainer" style="border-top:solid 2px black; border-bottom:solid 2px black">
+        <div class="left_side">
+            <img src="@Url.Content(item.ImagePath)" height="300" width="180" alt="IMAGE" />
+        </div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReleaseDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Actors)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Rating)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReleaseDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Actors)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rating)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Name">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Name">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Name">Delete</a>
-            </td>
-        </tr>
+        <div class="center_side">
+            <table class="table table-hover">
+                <tbody>
+                    <tr>
+                        <td colspan="3">@Html.DisplayFor(modelItem => item.Name)</td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">@Html.DisplayFor(modelItem => item.ReleaseDate)</td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">@Html.DisplayFor(modelItem => item.Description)</td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">@Html.DisplayFor(modelItem => item.Actors)</td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="right_side">
+            <h3> Rating: </h3>
+            <h2> @Html.DisplayFor(modelItem => item.Rating)</h2>
+            <div class="">
+                <a class="btn btn-info" asp-controller="Books" asp-action="RateBook" asp-route-id="@item.Name">Rate this</a>
+            </div>
+        </div>
+    </div>
 }
-    </tbody>
-</table>
