--- a/BooksByHalim/BooksByHalim/Views/Books/IndexComics.cshtml
+++ b/BooksByHalim/BooksByHalim/Views/Books/IndexComics.cshtml
@@ -7,8 +7,8 @@
 
 <div style="display:inline-block; width:100%">
 
-    <form method="get" asp-controller="Books" asp-action="FindMethod">
-        <input type="text" name="searchTerm" pattern=".{3,}" />
+    <form method="get" asp-controller="Books" asp-action="FindMethodComics">
+        <input type="text" name="searchTerm" />
         <input class="btn btn-primary" type="submit" value="Search" />
     </form>
 </div>
