--- a/BooksByHalim/BooksByHalim/Views/Books/ShowMeMore.cshtml
+++ b/BooksByHalim/BooksByHalim/Views/Books/ShowMeMore.cshtml
@@ -1,18 +1,20 @@
 ﻿@model IEnumerable<BooksByHalim.Models.Book>
-
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ShowMeMore";
 }
 
+<h1>ShowMeMore</h1>
 
 <div style="display:inline-block; width:100%">
 
-    <form method="get" asp-controller="Books" asp-action="FindMethod">
-        <input type="text" name="searchTerm" pattern=".{3,}" />
-        <input class="btn btn-primary" type="submit" value="Search" />
-    </form>
-</div>
 
+
+    <form method="get" asp-controller="Books" asp-action="FindMethod">
+        <input type="text" name="searchTerm" />
+        <button class="btn btn-primary" type="submit">Find</button>
+    </form>
+
+</div>
 
 @foreach (var item in Model)
 {
@@ -28,7 +30,7 @@
                         <td colspan="3">@Html.DisplayFor(modelItem => item.Name)</td>
                     </tr>
                     <tr>
-                        <td colspan="3">@Html.DisplayFor(modelItem => item.ReleaseDate.Date)</td>
+                        <td colspan="3">@Html.DisplayFor(modelItem => item.ReleaseDate)</td>
                     </tr>
                     <tr>
                         <td colspan="3">@Html.DisplayFor(modelItem => item.Description)</td>
@@ -44,7 +46,9 @@
         <div class="right_side">
             <h3> Rating: </h3>
             <h2> @Html.DisplayFor(modelItem => item.Rating)</h2>
-            <a class="btn btn-info" asp-controller="Books" asp-action="RateBook" asp-route-bookName="@item.Name">Rate book</a>
+            <div class="">
+                <a class="btn btn-info" asp-controller="Books" asp-action="RateBook" asp-route-id="@item.Name">Rate this</a>
+            </div>
         </div>
     </div>
 }
